--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "adequate-tiffany",
+   "id": "distributed-control",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "selected-detail",
+   "id": "lucky-segment",
    "metadata": {
     "scrolled": false
    },
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "quick-middle",
+   "id": "statutory-milan",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "native-florida",
+   "id": "piano-scout",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "coated-checklist",
+   "id": "inclusive-sword",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "colonial-terrorist",
+   "id": "popular-event",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unsigned-wilson",
+   "id": "applicable-partnership",
    "metadata": {},
    "source": [
     "axis\n",
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "inner-guest",
+   "id": "japanese-rating",
    "metadata": {
     "scrolled": true
    },
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "structural-notification",
+   "id": "occupied-joining",
    "metadata": {
     "scrolled": true
    },
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "solid-reception",
+   "id": "demanding-flashing",
    "metadata": {
     "scrolled": true
    },
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "greatest-spirit",
+   "id": "decreased-bandwidth",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "selective-involvement",
+   "id": "million-notification",
    "metadata": {
     "scrolled": true
    },
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "unlike-comment",
+   "id": "ready-southeast",
    "metadata": {
     "scrolled": false
    },
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "photographic-plant",
+   "id": "positive-edition",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "opposed-duncan",
+   "id": "frank-status",
    "metadata": {
     "scrolled": true
    },
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "colonial-mercy",
+   "id": "stuck-disposal",
    "metadata": {},
    "source": [
     "<h1>numpy slicing!!!!</h1>\n"
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "historical-pressing",
+   "id": "interracial-screening",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "premier-palestinian",
+   "id": "unexpected-amber",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "aerial-flight",
+   "id": "perceived-apache",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "civil-encoding",
+   "id": "confused-theorem",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "moving-heaven",
+   "id": "infrared-channel",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "efficient-abortion",
+   "id": "banner-strengthening",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "imported-seeking",
+   "id": "exposed-milwaukee",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "apart-monthly",
+   "id": "limited-newspaper",
    "metadata": {
     "scrolled": false
    },
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "immediate-first",
+   "id": "loaded-orbit",
    "metadata": {},
    "source": [
     "<h1> broadcasting </h1>\n",
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "advised-aaron",
+   "id": "voluntary-greenhouse",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "nervous-course",
+   "id": "rational-aaron",
    "metadata": {
     "scrolled": true
    },
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "sealed-stake",
+   "id": "tracked-marriage",
    "metadata": {
     "scrolled": true
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "artistic-blend",
+   "id": "handed-underwear",
    "metadata": {},
    "source": [
     "<h1>np.where</h1>\n",
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "changing-cyprus",
+   "id": "convenient-outside",
    "metadata": {
     "scrolled": false
    },
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "racial-legislature",
+   "id": "roman-visitor",
    "metadata": {
     "scrolled": false
    },
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "current-action",
+   "id": "crude-audit",
    "metadata": {},
    "outputs": [
     {
@@ -805,6 +805,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
